--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yt-downloader-api",
   "version": "1.0.0",
-  "description": "High Speed YTMP3 Download API",
+  "description": "High Speed YTMP3 Download API for Koyeb",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -11,7 +11,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
